<resources>
    <string name="app_name">JU+</string>
    <string name="noise_control">噪声控制</string>
    <string name="ventilate">通透</string>
    <string name="low_noise">降噪</string>
    <string name="close">关闭</string>
    <string name="auto_ear_check">自动入耳检测</string>
    <string name="auto_ear_tip">检测到入耳时，可自动播放音乐等。</string>
    <string name="smart_wake_up">智能语音唤醒</string>
    <string name="name">名称</string>
    <string name="keyboard_setting">按键设置</string>
    <string name="audio_setting">音效设置</string>
    <string name="left_ear">左耳</string>
    <string name="right_ear">右耳</string>
    <string name="more">更多</string>
    <string name="new_version">新版本</string>
    <string name="left">左</string>
    <string name="right">右</string>
    <string name="charge_box">充电盒</string>
    <string name="firm_version">固件版本</string>
    <string name="model">型号</string>
    <string name="no_devices">暂无设备</string>
    <string name="connect_blue_tooth">请至手机蓝牙管理连接设备后再试。</string>
    <string name="enter_bluetooth">进入蓝牙管理</string>
    <string name="current_device_output">当前音频输出</string>
    <string name="change_name">修改名称</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="name_cannot_empty">名称不能为空。</string>

    <string-array name="left_ear_double_setting">
        <item>语音助手唤醒</item>
        <item>播放/暂停</item>
        <item>下一曲</item>
        <item>上一曲</item>
        <item>关闭左耳</item>
    </string-array>

    <string-array name="left_ear_long_setting">
        <item>语音助手唤醒</item>
        <item>噪声控制（降噪/通透）</item>
        <item>噪声控制（降噪/通透/关闭）</item>
    </string-array>

    <string-array name="audio_setting">
        <item>音效一</item>
        <item>音效二</item>
        <item>音效三</item>
        <item>音效四</item>
        <item>音效五</item>

    </string-array>
</resources>
