<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/dialog_container"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingPrefix"
    android:paddingBottom="@dimen/dp_30"
    android:background="@drawable/shape_dialog_bg_bottom">

    <TextView
        android:id="@+id/tv_title_name"
        style="@style/dialog_tip"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/change_name"
        android:maxLength="20"
        android:textColor="@color/color_444444" />

    <RelativeLayout
        android:layout_marginTop="@dimen/dp_50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_Name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:background="@color/transparent"
            />

        <ImageView
            android:id="@+id/iv_clear_name"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            app:bl_corners_radius="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_25"
            android:layout_alignParentRight="true"
            app:bl_solid_color="@color/color_1a000000"
            android:layout_centerVertical="true"
            android:padding="@dimen/dp_3"
            android:src="@mipmap/icon_close_device_chooser"
            />
    </RelativeLayout>

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:background="@color/color_222222"
        android:layout_below="@+id/et_Name"
        />

    <TextView
        android:id="@+id/tv_name_null_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_24"
        android:text="@string/name_cannot_empty"
        android:textSize="@dimen/text_size_14"
        android:textColor="@color/color_fc6d7c"
        android:layout_marginTop="@dimen/dp_5"
        android:visibility="invisible"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_20"
        >

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_weight="4"
            app:bl_corners_radius="@dimen/dp_10"
            app:bl_solid_color="@android:color/white"
            app:bl_stroke_width="1dp"
            app:bl_stroke_color = "#16000000"
            android:text="@string/cancel"
            android:gravity="center"
            android:textColor="@color/color_444444"
            android:textSize="@dimen/text_size_16"
            android:layout_height="@dimen/dp_50"/>

        <kale.ui.view.SelectorTextView
            android:id="@+id/tv_save"
            android:layout_width="0dp"

            app:normalColor="@color/color_1BAEAE"
            app:disableColor="@color/color_16000000"

            app:normalDrawable="@drawable/shape_button_bg_enable"
            app:disableDrawable="@drawable/shape_button_bg_disable"

            android:enabled="true"

            android:text="@string/save"
            android:gravity="center"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/dp_13"
            android:layout_weight="5"
            android:layout_height="@dimen/dp_50"/>

    </LinearLayout>

</LinearLayout>