<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/dialog_container"
    android:background="@drawable/shape_dialog_bg_top"
    tools:ignore="MissingPrefix"
    android:gravity="center_horizontal"
    android:layout_gravity="center_horizontal"
    android:padding="@dimen/dp_20">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="layoutTop,recycler_view_paired,view_dot_recycleView"
        tools:visibility="visible"
        />

    <LinearLayout
        android:id="@+id/layoutTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_20"
        android:gravity="center_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:id="@+id/tv_device_count"
            android:textSize="@dimen/text_size_16"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="0个设备"
            />

        <ImageView
            android:id="@+id/iv_close_device_list"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            app:bl_corners_radius="@dimen/dp_30"
            app:bl_solid_color="@color/color_10000000"
            android:src="@mipmap/icon_close_device_chooser"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_paired"
        app:layout_constraintTop_toBottomOf="@+id/layoutTop"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/dp_20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_height="wrap_content"
        />

    <View
        android:id="@+id/view_dot_recycleView"
        style="@style/dot_line_style"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view_paired"
        />

    <LinearLayout
        android:id="@+id/layoutEmpty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_60"
            android:text="@string/no_devices"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/sp_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/connect_blue_tooth"
            android:textColor="@color/color_777777"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/tv_enter_bluetooth"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="42dp"
            android:paddingHorizontal="27dp"
            app:bl_corners_radius="@dimen/dp_10"
            app:bl_solid_color="#1a339999"
            android:gravity="center"
            android:textColor="@color/color_339999"
            android:textSize="@dimen/text_size_16"
            android:text="@string/enter_bluetooth" />

    </LinearLayout>

    <View
        android:id="@+id/view_dot_empty"
        style="@style/dot_line_style"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutEmpty"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="layoutEmpty,view_dot_empty"
        tools:visibility="invisible"
        />

</androidx.constraintlayout.widget.ConstraintLayout>