<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f6f7f9"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:paddingHorizontal="@dimen/dp_20"
        android:layout_gravity="center_vertical"
        >

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_arrow_right"
            android:layout_centerVertical="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more"
            android:gravity="center"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/sp_18"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_device_model"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/dp_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="型号"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/tv_model_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableRight="@mipmap/icon_arrow_right"
            android:drawablePadding="@dimen/dp_16"
            android:gravity="right"
            android:text="FB00007"
            android:textColor="@color/color_777777"
            android:textSize="@dimen/text_size_14" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_left_ear_setting"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/dp_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="蓝牙MAC地址"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/tv_left_setting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableRight="@mipmap/icon_arrow_right"
            android:drawablePadding="@dimen/dp_16"
            android:gravity="right"
            android:text="4d:9f:3u:02:23:34"
            android:textColor="@color/color_777777"
            android:textSize="@dimen/text_size_14" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_right_ear_setting"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/dp_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firm_version"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/tv_new_version"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/new_version"
            android:layout_marginRight="@dimen/dp_5"
            android:textColor="@color/color_fc6d7c"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:id="@+id/tv_right_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawableRight="@mipmap/icon_arrow_right"
            android:drawablePadding="@dimen/dp_16"
            android:gravity="right"
            android:text="v1.0.0.2"
            android:textColor="@color/color_777777"
            android:textSize="@dimen/text_size_14" />

    </LinearLayout>

</LinearLayout>
